tests/accept/six.ul
int foo(){

int x;

boolean b;

x = 2-2*3*(1+0);

b = x < 0+2*9-12;

b = x+91 == 2*2*2;

}
