tests/reject/notfour.ul
int foo(){
int x = 2*3+1+;
}
